--- a/김산호/assignment/src/TodoList.css
+++ b/김산호/assignment/src/TodoList.css
@@ -8,6 +8,7 @@
   font-size: 14px;
   font-weight: bold;
   color: rgba(102, 140, 255);
+  align-items: center;
 }
 .checkboxContainer {
   display: flex;
@@ -47,6 +48,7 @@
 .done {
   text-decoration: line-through;
   text-decoration-color: black;
+  align-items: center;
 }
 .delete {
   margin-left: auto;
